assets/scss/_indicator.scss
.door-status-container {
  width: 100%;
  p {
    text-align: center;
    font-size: 0.8rem;
    white-space: nowrap;
  }
  #indicator {
    display: inline-block;
    height: 10px;
    width: 10px;
    border-radius: 50%;
    margin-right: 0.5rem;
    background-color: #FBB917;
  }
}

